--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
 * {
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-  padding: 30px 60px;
+	padding: 30px 60px;
 }
 
 input {
-  font-size: 1.2rem;
-  width: 100%;
-  color: green;
+	font-size: 1.2rem;
+	width: 100%;
+	color: green;
+}
+
+.card-grid {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.card {
+	align-content: center;
+	border: 1px solid gray;
+	border-radius: 6px;
+	margin: 10px 0;
+	overflow: hidden;
+}
+
+.card p {
+	padding: 5px;
+	text-align: center;
+}
+
+.card img {
+	max-height: 170px;
 }
